--- a/lib/l10n/intl_bg.arb
+++ b/lib/l10n/intl_bg.arb
@@ -50,7 +50,7 @@
   "totalPriceServicePerDay": "Обща цена на услугата на ден",
   "saveEmployee": "Запазване на служител",
   "numberOfServiceForMonth": "Брой услуги за месеца",
-  "hello": " Здравей, ",
+  "hello": " Здравей ",
   "addReport": "Добавяне на отчет",
   "nameOfClient": "Име на клиент",
   "lastNameOfClient": "Фамилия на клиента",
@@ -64,10 +64,10 @@
   "price": "Цена",
   "submit": "Изпращане",
   "addService": "Добавяне на услуга",
-  "createOrSelectACategory": "Създаване или избор на категория",
+  "createOrSelectACategory": "Избери категория",
   "orCreateANewCategory": "Или създайте нова категория",
   "enterCategoryName": "Въведете име на категория",
-  "nameOfTheService": "Име на услугата",
+  "nameOfTheService": "Създаване на услуга",
   "categoryName": "Име на категория",
   "enterServiceName": "Въведете име на услуга",
   "serviceName": "Име на услуга",
@@ -109,7 +109,7 @@
   "employeeName": "Име на служител: ",
   "isRegularCus": "Редовен Cus е. : ",
   "cardPay": "Плащане с карта: ",
-  "date": "Дата: ",
+  "date": "Дата ",
   "category": "Категория: ",
   "service": "Услуга: ",
   "editReport": "Редактиране на отчет",
@@ -121,7 +121,7 @@
   "limited": "Ограничен",
   "applyFilters": "Прилагане на филтри",
   "filters": "Филтри",
-  "phone": "Телефон",
+  "phone": "Телефон ",
   "priceRange": "Ценови диапазон",
   "dates": "Дати",
   "from": "От",
@@ -178,5 +178,28 @@
   "results": "Резултати",
   "reports": "Отчети",
   "error": "Грешка",
-  "loginOrPasswordIsIncorrect": "Потребителското име или паролата са неправилни"
+  "loginOrPasswordIsIncorrect": "Потребителското име или паролата са неправилни",
+  "mililiters": "милилитри",
+  "kwh": "KW/ч",
+  "kilograms": "Килограми",
+  "letters": "Букви",
+  "pieces": "Парчета",
+  "grams": "грамове",
+  "boxes": "Кутии",
+  "thereIsOnlyOneCostAddedYetAddMoreTo": "Има само една добавена цена, но добавете още, за да начертаете графиката",
+  "noCostsAddedYet": "Все още няма добавени разходи",
+  "allCostsAreAddedOnTheSameDateAddMore": "Всички разходи се добавят на една и съща дата, добавете още, за да начертаете графиката",
+  "settings": "Настройки",
+  "statistic": "Статистика",
+  "costOfMaterials": "Разходи за\nматериали",
+  "pricenservices": "Цена\nуслуги",
+  "netProfit": "Нетна\nпечалба",
+  "whatIsTheNameOfYourFavoritePet": "Wie heißt Ihr Lieblingshaustier?",
+  "whatsYourChildhoodNickname": "Wie lautet Ihr Spitzname aus der Kindheit?",
+  "whatIsYourFavoriteMovie": "Was ist Ihr Lieblingsfilm?",
+  "whatIsYourFavoriteBook": "Was ist Ihr Lieblingsbuch?",
+  "whatIsYourFavoriteFood": "Was ist Ihr Lieblingsessen?",
+  "whatIsYourFavoriteSong": "Was ist Ihr Lieblingslied?",
+  "whatIsYourFavoriteColor": "Was ist Ihre Lieblingsfarbe?",
+  "number": "номер"
 }
