--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -50,7 +50,7 @@
   "totalPriceServicePerDay": "Gesamtpreis des Services pro Tag",
   "saveEmployee": "Mitarbeiter speichern",
   "numberOfServiceForMonth": "Anzahl der Services für den Monat",
-  "hello": "Hallo, ",
+  "hello": "Hallo ",
   "addReport": "Bericht hinzufügen",
   "nameOfClient": "Name des Kunden",
   "lastNameOfClient": "Nachname des Kunden",
@@ -64,10 +64,10 @@
   "price": "Preis",
   "submit": "Senden",
   "addService": "Dienst hinzufügen",
-  "createOrSelectACategory": "Kategorie erstellen oder auswählen",
+  "createOrSelectACategory": "Wählen Sie eine Kategorie",
   "orCreateANewCategory": "Oder neue Kategorie erstellen",
   "enterCategoryName": "Kategorienamen eingeben",
-  "nameOfTheService": "Name des Dienstes",
+  "nameOfTheService": "Erstellen Sie einen Service",
   "categoryName": "Kategoriename",
   "enterServiceName": "Dienstnamen eingeben",
   "serviceName": "Dienstname",
@@ -109,7 +109,7 @@
   "employeeName": "Mitarbeitername:",
   "isRegularCus": "Ist regulärer Kunde. : ",
   "cardPay": "Kartenzahlung: ",
-  "date": "Datum : ",
+  "date": "Datum ",
   "category": "Kategorie: ",
   "service": "Dienst: ",
   "editReport": "Bericht bearbeiten",
@@ -178,5 +178,28 @@
   "results": "Ergebnisse",
   "reports": "Berichte",
   "error": "Fehler",
-  "loginOrPasswordIsIncorrect": "Login oder Passwort ist falsch"
+  "loginOrPasswordIsIncorrect": "Login oder Passwort ist falsch",
+  "milliliters": "Milliliter",
+  "kwh": "KW/h",
+  "kilograms": "Kilogramm",
+  "letters": "Briefe",
+  "pieces": "Stück",
+  "grams": "Gramm",
+  "boxes": "Kartons",
+  "thereIsOnlyOneCostAddedYetAddMoreTo": "Es wurde nur eine Kostenangabe hinzugefügt, fügen Sie jedoch weitere hinzu, um das Diagramm zu zeichnen",
+  "noCostsAddedYet": "Noch keine Kosten hinzugefügt",
+  "allCostsAreAddedOnTheSameDateAddMore": "Alle Kosten wurden am selben Datum hinzugefügt, fügen Sie weitere hinzu, um das Diagramm zu zeichnen",
+  "settings": "Einstellungen",
+  "statistic": "Statistik",
+  "costOfMaterials": "Kosten für\nMaterialien",
+  "pricenservices": "Preis\nDienstleistungen",
+  "netProfit": "Nettogewinn",
+  "whatIsTheNameOfYourFavoritePet": "Wie heißt Ihr Lieblingshaustier?",
+  "whatsYourChildhoodNickname": "Wie lautet Ihr Spitzname aus der Kindheit?",
+  "whatIsYourFavoriteMovie": "Was ist Ihr Lieblingsfilm?",
+  "whatIsYourFavoriteBook": "Was ist Ihr Lieblingsbuch?",
+  "whatIsYourFavoriteFood": "Was ist Ihr Lieblingsessen?",
+  "whatIsYourFavoriteSong": "Was ist Ihr Lieblingslied?",
+  "whatIsYourFavoriteColor": "Was ist Ihre Lieblingsfarbe?",
+  "number": "nummer"
 }
