--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -50,7 +50,7 @@
   "totalPriceServicePerDay": "Total Price Service per day",
   "saveEmployee": "Save Employee",
   "numberOfServiceForMonth": "Number of Service for month",
-  "hello": "Hello, ",
+  "hello": "Hello ",
   "addReport": "Add Report",
   "nameOfClient": "Name of Client",
   "lastNameOfClient": "Last Name of Client",
@@ -64,10 +64,10 @@
   "price": "Price",
   "submit": "Submit",
   "addService": "Add Service",
-  "createOrSelectACategory": "Create Or Select a category",
+  "createOrSelectACategory": "Select a category",
   "orCreateANewCategory": "Or Create a new Category",
   "enterCategoryName": "Enter Category Name",
-  "nameOfTheService": "Name of the Service",
+  "nameOfTheService": "Create a Service",
   "categoryName": "Category Name",
   "enterServiceName": "Enter Service Name",
   "serviceName": "Service Name",
@@ -109,7 +109,7 @@
   "employeeName": "Employee Name: ",
   "isRegularCus": "Is Regular Cus. : ",
   "cardPay": "Card Pay: ",
-  "date": "Date : ",
+  "date": "Date ",
   "category": "Category: ",
   "service": "Service: ",
   "editReport": "Edit Report",
@@ -121,7 +121,7 @@
   "limited": "Limited",
   "applyFilters": "Apply Filters",
   "filters": "Filters",
-  "phone": "Phone",
+  "phone": "Phone\nNumber",
   "priceRange": "Price Range",
   "dates": "Dates",
   "from": "From",
@@ -138,8 +138,8 @@
   "noData": "No data",
   "regncus": "Reg\nCus",
   "cardnpay": "Card\nPay",
-  "employeendata": "Employee\nData",
-  "customerndata": "Customer\nData",
+  "employeendata": "Employee\nInformation",
+  "customerndata": "Customer\nInformation",
   "newncus": "New\nCus",
   "total": "Total",
   "deleted": "Deleted",
@@ -168,7 +168,7 @@
   "newnclient": "New\nClient",
   "regnclient": "Reg\nClient",
   "numOfnservices": "Num. of\nServices",
-  "costs": "costs",
+  "costs": "Costs",
   "sales": "Sales",
   "pleaseAddACategoryFirstToAddAnEmployee": "Please add a category first to add an employee",
   "addCategoryFirst": "Add Category First",
@@ -178,5 +178,28 @@
   "results": "Results",
   "reports": "Reports",
   "error": "Error",
-  "loginOrPasswordIsIncorrect": "Login or password is incorrect"
+  "loginOrPasswordIsIncorrect": "Login or password is incorrect",
+  "milliliters": "Milliliters",
+  "kwh": "KW/h",
+  "kilograms": "Kilograms",
+  "letters": "Letters",
+  "pieces": "Pieces",
+  "grams": "Grams",
+  "boxes": "Boxes",
+  "thereIsOnlyOneCostAddedYetAddMoreTo": "There is only one cost added yet add more to plot the graph",
+  "noCostsAddedYet": "No Costs added yet",
+  "allCostsAreAddedOnTheSameDateAddMore": "All costs are added on the same date, add more to plot the graph",
+  "settings": "Settings",
+  "statistic": "Statistic",
+  "costOfMaterials": "Cost of\nmaterials",
+  "pricenservices": "Price\nservices",
+  "netProfit": "Net\nprofit",
+  "whatIsTheNameOfYourFavoritePet": "What is the name of your favorite pet?",
+  "whatsYourChildhoodNickname": "Whats Your Childhood Nickname?",
+  "whatIsYourFavoriteMovie": "What is your favorite movie?",
+  "whatIsYourFavoriteBook": "What is your favorite book?",
+  "whatIsYourFavoriteFood": "What is your favorite food?",
+  "whatIsYourFavoriteSong": "What is your favorite song?",
+  "whatIsYourFavoriteColor": "What is your favorite color?",
+  "number": "number"
 }
