--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -50,7 +50,7 @@
   "totalPriceServicePerDay": "Precio Total Servicio por día",
   "saveEmployee": "Guardar Empleado",
   "numberOfServiceForMonth": "Número de servicios por mes",
-  "hello": "Hola hola",
+  "hello": "Hola",
   "addReport": "Agregar Informe",
   "nameOfClient": "Nombre del Cliente",
   "lastNameOfClient": "Apellido del Cliente",
@@ -64,10 +64,10 @@
   "price": "Precio",
   "submit": "enviar",
   "addService": "Agregar Servicio",
-  "createOrSelectACategory": "Crear o seleccionar una categoría",
+  "createOrSelectACategory": "Seleccione una categoría",
   "orCreateANewCategory": "O crear una nueva categoría",
   "enterCategoryName": "Ingrese el nombre de la categoría",
-  "nameOfTheService": "Nombre del Servicio",
+  "nameOfTheService": "Crear un servicio",
   "categoryName": "Nombre de categoría",
   "enterServiceName": "Ingrese el nombre del servicio",
   "serviceName": "Nombre del servicio",
@@ -109,7 +109,7 @@
   "employeeName": "Nombre del empleado: ",
   "isRegularCus": "Es cliente regular: ",
   "cardPay": "Pago con Tarjeta: ",
-  "date": "Fecha: ",
+  "date": "Fecha",
   "category": "Categoría:",
   "service": "Servicio:",
   "editReport": "Editar informe",
@@ -178,5 +178,28 @@
   "results": "Resultados",
   "reports": "Informes",
   "error": "Error",
-  "loginOrPasswordIsIncorrect": "El inicio de sesión o la contraseña son incorrectos"
+  "loginOrPasswordIsIncorrect": "El inicio de sesión o la contraseña son incorrectos",
+  "mililitros": "Mililitros",
+  "kwh": "KW/h",
+  "kilogramos": "Kilogramos",
+  "cartas": "Cartas",
+  "piezas": "Piezas",
+  "gramos": "Gramos",
+  "cajas": "Cajas",
+  "thereIsOnlyOneCostAddedYetAddMoreTo": "Solo hay un costo agregado pero agrega más para trazar el gráfico",
+  "noCostsAddedYet": "Aún no se han agregado costos",
+  "allCostsAreAddedOnTheSameDateAddMore": "Todos los costos se agregan en la misma fecha, agregue más para trazar el gráfico",
+  "configuración": "Configuración",
+  "estadística": "Estadística",
+  "costOfMaterials": "Costo de\nmateriales",
+  "pricenservices": "Precio\nservicios",
+  "netProfit": "Beneficio\nneto",
+  "whatIsTheNameOfYourFavoritePet": "¿Cuál es el nombre de tu mascota favorita?",
+  "whatsYourChildhoodNickname": "¿Cuál es tu apodo de infancia?",
+  "whatIsYourFavoriteMovie": "¿Cuál es tu película favorita?",
+  "whatIsYourFavoriteBook": "¿Cuál es tu libro favorito?",
+  "whatIsYourFavoriteFood": "¿Cuál es tu comida favorita?",
+  "whatIsYourFavoriteSong": "¿Cuál es tu canción favorita?",
+  "whatIsYourFavoriteColor": "¿Cuál es tu color favorito?",
+  "number": "número"
 }
