--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -1,15 +1,15 @@
 {
   "addCost": "Dodaj koszt",
   "repetitionInterval": "Interwał powtórzeń",
-  "doNotRepeat": "Nie powtarzaj",
-  "everyDay": "każdego dnia",
-  "name": "nazwa ",
+  "doNotRepeat": "Nie powtarzają się",
+  "everyDay": "Każdego dnia",
+  "name": "Imię",
   "nameOfExpense": "Nazwa wydatku",
   "selectCategories": "Wybierz kategorie",
   "categories": "Kategorie",
-  "deductFromTax": "Odliczenie od PODATKU",
+  "deductFromTax": "Odliczenie od podatku",
   "systematicExpenditure": "Wydatki systematyczne",
-  "everyWeek": "co tydzień",
+  "everyWeek": "Co tydzień",
   "everyMonth": "Co miesiąc",
   "everyQuarter": "Co kwartał",
   "everyYear": "Co roku",
@@ -29,9 +29,9 @@
   "restoreData": "Przywróć dane",
   "clearData": "Wyczyść dane",
   "areYouSureYouWantToClearAllData": "Czy na pewno chcesz wyczyścić wszystkie dane?",
-  "login": "Zaloguj się",
+  "login": "Login pracownika",
   "userName": "Nazwa użytkownika",
-  "password": "Hasło",
+  "password": "Hasto pracownika",
   "orSignInAs": "Lub zaloguj się jako",
   "adminMaine": "Admin Maine",
   "enterYourLastName": "Wpisz swoje nazwisko",
@@ -39,18 +39,18 @@
   "enterYourLogin": "Wprowadź swój login",
   "enterYourPassword": "Wprowadź swoje hasło",
   "selectCategoriesFromTheListnmaybeSeveral": "Wybierz kategorie z listy\n(może kilka)",
-  "setPercentageOfIncomeIfNecessary": "Ustaw procent dochodu, jeśli to konieczne",
+  "setPercentageOfIncomeIfNecessary": "Odsetek od dochodu Poziom widoczności in esli to konieczne",
   "setPercentageOfIncome": "Ustaw procent dochodu",
-  "percentage": "Procent",
+  "percentage": "Odsetek",
   "visibilityLevelWithACrossFromTheList": " Poziom widoczności z krzyżykiem z listy",
-  "employeePercentage": "Procent pracownika",
+  "employeePercentage": "Odsetek pracownika",
   "totalPercentagePerMonth": "Całkowity procent miesięcznie",
-  "amountPercentagePerDay": "Procent kwoty dziennie",
+  "amountPercentagePerDay": "Odsetek kwoty dziennie",
   "showPhone": "Pokaż telefon",
   "totalPriceServicePerDay": "Całkowita cena usługi za dzień",
   "saveEmployee": "Zapisz pracownika",
   "numberOfServiceForMonth": "Numer usługi w miesiącu",
-  "hello": "cześć cześć, ",
+  "hello": "Cześć",
   "addReport": "Dodaj raport",
   "nameOfClient": "Nazwa Klienta",
   "lastNameOfClient": "Nazwisko Klienta",
@@ -64,10 +64,10 @@
   "price": "Cena",
   "submit": "Prześlij",
   "addService": "Dodaj usługę",
-  "createOrSelectACategory": "Utwórz lub wybierz kategorię",
+  "createOrSelectACategory": "Wybierz kategorię",
   "orCreateANewCategory": "Lub utwórz nową kategorię",
   "enterCategoryName": "Wprowadź nazwę kategorii",
-  "nameOfTheService": "Nazwa usługi",
+  "nameOfTheService": "Utwórz usługę",
   "categoryName": "Nazwa kategorii",
   "enterServiceName": "Wprowadź nazwę usługi",
   "serviceName": "Nazwa usługi",
@@ -81,7 +81,7 @@
   "exit": "Wyjście",
   "areYouSureYouWantToExitTheApp": "Czy jesteś pewien? Chcesz wyjść z aplikacji.",
   "exitApp": "Wyjdź z aplikacji",
-  "yes": "tak",
+  "yes": "Tak",
   "no": "Nie",
   "costsFilter": "Filtr kosztów",
   "clear": "Wyczyść",
@@ -109,7 +109,7 @@
   "employeeName": "Nazwisko pracownika: ",
   "isRegularCus": "Jest zwykłym zwyczajem: ",
   "cardPay": "Płatność kartą: ",
-  "date": "Data: ",
+  "date": "Data",
   "category": "Kategoria: ",
   "service": "usługa: ",
   "editReport": "Edytuj raport",
@@ -132,15 +132,15 @@
   "nameOfncost": "Nazwa\nKosztu",
   "relatedncategories": "Powiązane\nKategorie",
   "deductednfromTax": "Odliczone\nOd podatku",
-  "systematicnexpenditure": "Systematic\nWydatki",
+  "systematicnexpenditure": "Koszty\nsystematyczne",
   "deleteCost": "Usuń koszt",
   "areYouSureYouWantToDeleteThisCost": "Czy na pewno chcesz usunąć ten koszt?",
   "noData": "Brak danych",
-  "regncus": "Reg\nCus",
+  "regncus": "Stasy\nklient",
   "cardnpay": "Karta\nZapłać",
   "employeendata": "Dane pracownika\n",
   "customerndata": "Dane klienta\n",
-  "newncus": "Nowy\nCus",
+  "newncus": "Placone\nkarta",
   "total": "Łącznie",
   "deleted": "usunięte",
   "itemDeleted": "Element usunięty",
@@ -168,15 +168,37 @@
   "newnclient": "Nowy\nKlient",
   "regnclient": "Zarejestruj\nKlienta",
   "numOfnservices": "Liczba\nusług",
-  "costs": "koszty",
-  "sales": "sprzedaż",
+  "costs": "Koszty",
+  "sales": "Sprzedaż",
   "PleaseAddACategoryFirstToAddAnEmployee": "Aby dodać pracownika, proszę najpierw dodać kategorię",
   "addCategoryFirst": "Najpierw dodaj kategorię",
   "logout": "Wyloguj się",
   "areYouSureYouWantToLogout": "Czy jesteś pewien? Chcesz się wylogować.",
-  "graphics": "Grafika",
+  "graphics": "Wykresy",
   "results": "Wyniki",
   "reports": "Raporty",
   "error": "Błąd",
-  "loginOrPasswordIsIncorrect": "Login lub hasło są nieprawidłowe"
+  "loginOrPasswordIsIncorrect": "Login lub hasło są nieprawidłowe",
+  "milliliters": "KW/h",
+  "kilograms": "Kilogramy",
+  "letters": "Litery",
+  "pieces": "kawałki",
+  "grams": "gramy",
+  "boxes": "pudełka",
+  "thereIsOnlyOneCostAddedYetAddMoreTo": "Dodano tylko jeden koszt, ale dodaj więcej, aby wykreślić wykres",
+  "noCostsAddedYet": "Nie dodano jeszcze żadnych kosztów",
+  "allCostsAreAddedOnTheSameDateAddMore": "Wszystkie koszty są dodawane tego samego dnia, dodaj więcej, aby narysować wykres",
+  "settings": "Ustawienia",
+  "statistic": "Statystyka",
+  "costOfMaterials": "Koszt\nmateriałów",
+  "pricenservices": "Cena\nusług",
+  "netProfit": "Zysk\nnetto",
+  "whatIsTheNameOfYourFavoritePet": "Jak ma na imię Twoje ulubione zwierzątko?",
+  "whatsYourChildhoodNickname": "Jaki jest Twój pseudonim z dzieciństwa?",
+  "whatIsYourFavoriteMovie": "Jaki jest twój ulubiony film?",
+  "whatIsYourFavoriteBook": "Jaka jest Twoja ulubiona książka?",
+  "whatIsYourFavoriteFood": "Jakie jest Twoje ulubione jedzenie?",
+  "whatIsYourFavoriteSong": "Jaka jest twoja ulubiona piosenka?",
+  "whatIsYourFavoriteColor": "Jaki jest twój ulubiony kolor?",
+  "number": "numer"
 }
