--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -50,7 +50,7 @@
   "totalPriceServicePerDay": "Общая стоимость услуги за день",
   "saveEmployee": "Сохранить сотрудника",
   "numberOfServiceForMonth": "Количество услуг за месяц",
-  "hello": "привет, ",
+  "hello": "привет ",
   "addReport": "Добавить отчет",
   "nameOfClient": "Имя клиента",
   "lastNameOfClient": "Фамилия клиента",
@@ -109,7 +109,7 @@
   "employeeName": "Имя сотрудника: ",
   "isRegularCus": "Является обычным Cus. : ",
   "cardPay": "Оплата картой: ",
-  "date": "Дата: ",
+  "date": "Дата",
   "category": "Категория: ",
   "service": "Сервис: ",
   "editReport": "Редактировать отчет",
@@ -178,5 +178,28 @@
   "results": "Результаты",
   "reports": "Отчеты",
   "error": "Ошибка",
-  "loginOrPasswordIsIncorrect": "Логин или пароль неверен"
+  "loginOrPasswordIsIncorrect": "Логин или пароль неверен",
+  "миллилитры": "Милилитры",
+  "кВтч": "КВт/ч",
+  "килограммы": "Килограммы",
+  "письма": "Письма",
+  "куски": "Части",
+  "граммы": "Граммы",
+  "boxes": "Коробки",
+  "thereIsOnlyOneCostAddedYetAddMoreTo": "Добавлена ​​только одна стоимость, но добавьте еще, чтобы построить график",
+  "noCostsAddedYet": "Стоимости пока не добавлены",
+  "allCostsAreAddedOnTheSameDateAddMore": "Все затраты добавляются в одну и ту же дату, добавьте еще, чтобы построить график",
+  "settings": "Настройки",
+  "статистика": "Статистика",
+  "costOfMaterials": "Стоимость\nматериалов",
+  "pricenservices": "Цена\nуслуги",
+  "netProfit": "Чистая\nприбыль",
+  "whatIsTheNameOfYourFavoritePet": "Как зовут вашего любимого питомца?",
+  "whatsYourChildhoodNickname": "Какой у вас псевдоним в детстве?",
+  "whatIsYourFavoriteMovie": "Какой ваш любимый фильм?",
+  "whatIsYourFavoriteBook": "Какая ваша любимая книга?",
+  "whatIsYourFavoriteFood": "Какая ваша любимая еда?",
+  "whatIsYourFavoriteSong": "Какая ваша любимая песня?",
+  "whatIsYourFavoriteColor": "Какой ваш любимый цвет?",
+  "number": "число"
 }
