--- a/lib/l10n/intl_cs.arb
+++ b/lib/l10n/intl_cs.arb
@@ -50,7 +50,7 @@
   "totalPriceServicePerDay": "Celková cena služby za den",
   "saveEmployee": "Uložit zaměstnance",
   "numberOfServiceForMonth": "Počet služeb za měsíc",
-  "hello": "Ahoj ahoj, ",
+  "hello": "Ahoj ahoj ",
   "addReport": "Přidat přehled",
   "nameOfClient": "Jméno klienta",
   "lastNameOfClient": "Příjmení klienta",
@@ -64,10 +64,10 @@
   "price": "Cena",
   "submit": "Odeslat",
   "addService": "Přidat službu",
-  "createOrSelectACategory": "Vytvořit nebo vybrat kategorii",
+  "createOrSelectACategory": "Vyberte kategorii",
   "orCreateANewCategory": "Nebo vytvořit novou kategorii",
   "enterCategoryName": "Zadejte název kategorie",
-  "nameOfTheService": "Název služby",
+  "nameOfTheService": "Vytvořte službu",
   "categoryName": "Název kategorie",
   "enterServiceName": "Zadejte název služby",
   "serviceName": "Název služby",
@@ -109,7 +109,7 @@
   "employeeName": "Jméno zaměstnance: ",
   "isRegularCus": "Je pravidelné Cus. : ",
   "cardPay": "Platba kartou: ",
-  "date": "Datum: ",
+  "date": "Datum ",
   "category": "kategorie: ",
   "service": "Service: ",
   "editReport": "Upravit zprávu",
@@ -178,5 +178,28 @@
   "results": "Výsledky",
   "reports": "Reports",
   "error": "Chyba",
-  "loginOrPasswordIsIncorrect": "Přihlašovací jméno nebo heslo je nesprávné"
+  "loginOrPasswordIsIncorrect": "Přihlašovací jméno nebo heslo je nesprávné",
+  "mililitry": "mililitry",
+  "kwh": "KW/h",
+  "kilograms": "Kilogramy",
+  "letters": "Dopisy",
+  "kusy": "kusy",
+  "gramy": "gramy",
+  "boxy": "boxy",
+  "thereIsOnlyOneCostAddedYetAddMoreTo": "K vykreslení grafu je přidána pouze jedna cena, ale přidejte další",
+  "noCostsAddedYet": "Zatím nebyly přidány žádné náklady",
+  "allCostsAreAddedOnTheSameDateAddMore": "Všechny náklady jsou přidány ke stejnému datu, přidejte další pro vykreslení grafu",
+  "settings": "Nastavení",
+  "statistic": "Statistika",
+  "costOfMaterials": "Náklady na\nmateriály",
+  "pricenservices": "Cena\nslužby",
+  "netProfit": "Čistý\nzisk",
+  "whatIsTheNameOfYourFavoritePet": "Jak se jmenuje tvůj oblíbený mazlíček?",
+  "whatsYourChildhoodNickname": "Jaká je vaše přezdívka z dětství?",
+  "whatIsYourFavoriteMovie": "Jaký je váš oblíbený film?",
+  "whatIsYourFavoriteBook": "Jaká je vaše oblíbená kniha?",
+  "whatIsYourFavoriteFood": "Jaké je vaše oblíbené jídlo?",
+  "whatIsYourFavoriteSong": "Jaká je vaše oblíbená píseň?",
+  "whatIsYourFavoriteColor": "Jaká je vaše oblíbená barva?",
+  "number": "číslo"
 }
