--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -50,7 +50,7 @@
   "totalPriceServicePerDay": "Загальна вартість послуги за день",
   "saveEmployee": "Зберегти працівника",
   "numberOfServiceForMonth": "Кількість послуг за місяць",
-  "hello": " привіт, ",
+  "hello": " привіт ",
   "addReport": "Додати звіт",
   "nameOfClient": "Ім'я клієнта",
   "lastNameOfClient": "Прізвище клієнта",
@@ -64,10 +64,10 @@
   "price": "Ціна",
   "submit": "Надіслати",
   "addService": "Додати послугу",
-  "createOrSelectACategory": "Створити або вибрати категорію",
+  "createOrSelectACategory": "Виберіть категорію",
   "orCreateANewCategory": "Або створити нову категорію",
   "enterCategoryName": "Введіть назву категорії",
-  "nameOfTheService": "Назва служби",
+  "nameOfTheService": "Створіть службу",
   "categoryName": "Назва категорії",
   "enterServiceName": "Введіть назву служби",
   "serviceName": "Назва служби",
@@ -109,9 +109,9 @@
   "employeeName": "Ім'я працівника: ",
   "isRegularCus": "Звичайний код. : ",
   "cardPay": "Оплата карткою: ",
-  "date": "Дата: ",
-  "category": "Категорія: ",
-  "service": "Сервіс: ",
+  "date": "Дата",
+  "category": "Категорія ",
+  "service": "Послуая",
   "editReport": "Редагувати звіт",
   "employees": "Співробітники",
   "noEmployeeFoundnpleaseAddANewEmployee": "Не знайдено жодного працівника\nБудь ласка, додайте нового працівника.",
@@ -129,18 +129,18 @@
   "masters": "Майстри",
   "services": "Послуги",
   "selectLanguage": "Виберіть мову",
-  "nameOfncost": "Назва\nвартості",
+  "nameOfncost": "Назва\nвитрати",
   "relatedncategories": "Пов'язані\nкатегорії",
-  "deductednfromTax": "Вираховано\nз ПОДАТКУ",
-  "systematicnexpenditure": "Систmatic\nВитрати",
+  "deductednfromTax": "Відрахувати\nподатку",
+  "systematicnexpenditure": "ПостійHi\nвитрати",
   "deleteCost": "Видалити вартість",
   "areYouSureYouWantToDeleteThisCost": "Ви впевнені, що хочете видалити цю вартість?",
   "noData": "Немає даних",
-  "regncus": "Рег\nCus",
-  "cardnpay": "Картка\nОплата",
+  "regncus": "Постійний\nклієнто",
+  "cardnpay": "Oплата\nкартою",
   "employeendata": "Дані\nпрацівника",
   "customerndata": "Дані\nклієнта",
-  "newncus": "Новий\nCus",
+  "newncus": "Новий\nклiєнT",
   "total": "Усього",
   "deleted": "Видалено",
   "itemDeleted": "Елемент видалено",
@@ -160,23 +160,46 @@
   "clearDates": "Очистити дати",
   "anErrorOccurred": "Сталася помилка",
   "noDataFound": "Дані не знайдено",
-  "masternname": "Головне\nім'я",
-  "noRegnclient": "Номер Reg\nClient",
-  "noNewnclient": "Ні. Новий\nклієнт",
-  "noOfnservices": "Кількість\nслужб",
+  "masternname": "ім'я\n працівника",
+  "noRegnclient": "Постійних\nклієнтів",
+  "noNewnclient": "Нових\nкліднтів",
+  "noOfnservices": "Кількість\nпослуг",
   "cost": "Вартість",
   "newnclient": "Новий\nклієнт",
   "regnclient": "Реєстраційний\nклієнт",
   "numOfnservices": "Кількість\nслужб",
   "costs": "витрати",
+  "costOfMaterials": "Вартість матеріалів",
   "sales": "Продажі",
   "pleaseAddACategoryFirstToAddAnEmployee": "Спочатку додайте категорію, щоб додати працівника",
   "addCategoryFirst": "Додати категорію спочатку",
   "logout": "Вийти",
   "areYouSureYouWantToLogout": "Ви впевнені? Ви хочете вийти.",
-  "graphics": "Графіка",
+  "graphics": "Графіки",
   "results": "Результати",
   "reports": "Звіти",
   "error": "Помилка",
-  "loginOrPasswordIsIncorrect": "Логін або пароль неправильні"
+  "loginOrPasswordIsIncorrect": "Логін або пароль неправильні",
+  "milliliters": "Милилитры",
+  "kwh": "КВт/ч",
+  "kilograms": "Килограммы",
+  "letters": "Письма",
+  "pieces": "Части",
+  "grams": "Граммы",
+  "boxes": "Коробки",
+  "thereIsOnlyOneCostAddedYetAddMoreTo": "Добавлена ​​только одна стоимость, но добавьте еще, чтобы построить график",
+  "noCostsAddedYet": "Стоимости пока не добавлены",
+  "allCostsAreAddedOnTheSameDateAddMore": "Все затраты добавляются в одну и ту же дату, добавьте еще, чтобы построить график",
+  "settings": "Настройки",
+  "statistic": "Статистика",
+  "pricenservices": "Цена\nуслуги",
+  "netProfit": "чистий\nприбуток",
+  "whatIsTheNameOfYourFavoritePet": "Як звуть вашу улюблену тварину?",
+  "whatsYourChildhoodNickname": "Яке ваше дитяче прізвисько?",
+  "whatIsYourFavoriteMovie": "Який твій улюблений фільм?",
+  "whatIsYourFavoriteBook": "Яка ваша улюблена книга?",
+  "whatIsYourFavoriteFood": "Яка твоя улюблена їжа?",
+  "whatIsYourFavoriteSong": "Яка твоя улюблена пісня?",
+  "whatIsYourFavoriteColor": "Який твій улюблений колір?",
+  "number": "номер"
 }
