--- a/lib/l10n/intl_cs.arb
+++ b/lib/l10n/intl_cs.arb
@@ -111,7 +111,7 @@
   "cardPay": "Platba kartou: ",
   "date": "Datum ",
   "category": "kategorie: ",
-  "service": "Service: ",
+  "service": "Service ",
   "editReport": "Upravit zprávu",
   "employees": "Zaměstnanci",
   "noEmployeeFoundnpleaseAddANewEmployee": "Nenalezen žádný zaměstnanec\nPřidejte prosím nového zaměstnance.",
