--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -111,7 +111,7 @@
   "cardPay": "Kartenzahlung: ",
   "date": "Datum ",
   "category": "Kategorie: ",
-  "service": "Dienst: ",
+  "service": "Dienst ",
   "editReport": "Bericht bearbeiten",
   "employees": "Mitarbeiter",
   "noEmployeeFoundnpleaseAddANewEmployee": "Kein Mitarbeiter gefunden\nBitte fügen Sie einen neuen Mitarbeiter hinzu.",
