--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -111,7 +111,7 @@
   "cardPay": "Card Pay: ",
   "date": "Date ",
   "category": "Category: ",
-  "service": "Service: ",
+  "service": "Service",
   "editReport": "Edit Report",
   "employees": "Employees",
   "noEmployeeFoundnpleaseAddANewEmployee": "No Employee Found\nPlease add a new employee.",
@@ -121,7 +121,7 @@
   "limited": "Limited",
   "applyFilters": "Apply Filters",
   "filters": "Filters",
-  "phone": "Phone\nNumber",
+  "phone": "Phone",
   "priceRange": "Price Range",
   "dates": "Dates",
   "from": "From",
