--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -111,7 +111,7 @@
   "cardPay": "Płatność kartą: ",
   "date": "Data",
   "category": "Kategoria: ",
-  "service": "usługa: ",
+  "service": "usługa ",
   "editReport": "Edytuj raport",
   "employees": "pracownicy",
   "noEmployeeFoundnpleaseAddANewEmployee": "Nie znaleziono pracownika\nProszę dodać nowego pracownika.",
