--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -111,7 +111,7 @@
   "cardPay": "Оплата картой: ",
   "date": "Дата",
   "category": "Категория: ",
-  "service": "Сервис: ",
+  "service": "Сервис ",
   "editReport": "Редактировать отчет",
   "employees": "Сотрудники",
   "noEmployeeFoundnpleaseAddANewEmployee": "Сотрудник не найден\nПожалуйста, добавьте нового сотрудника.",
