unique clients added to results , visible phone, and last week reports button added to add employee

--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -182,7 +182,7 @@
   "milliliters": "Milliliter",
   "kwh": "KW/h",
   "kilograms": "Kilogramm",
-  "letters": "Briefe",
+  "letters": "Liter",
   "pieces": "Stück",
   "grams": "Gramm",
   "boxes": "Kartons",
