--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -182,7 +182,7 @@
   "milliliters": "Milliliters",
   "kwh": "KW/h",
   "kilograms": "Kilograms",
-  "letters": "Letters",
+  "letters": "Liters",
   "pieces": "Pieces",
   "grams": "Grams",
   "boxes": "Boxes",
