--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -181,7 +181,7 @@
   "loginOrPasswordIsIncorrect": "Login lub hasło są nieprawidłowe",
   "milliliters": "KW/h",
   "kilograms": "Kilogramy",
-  "letters": "Litery",
+  "letters": "Liters",
   "pieces": "kawałki",
   "grams": "gramy",
   "boxes": "pudełka",
