--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -200,5 +200,7 @@
   "whatIsYourFavoriteFood": "Jakie jest Twoje ulubione jedzenie?",
   "whatIsYourFavoriteSong": "Jaka jest twoja ulubiona piosenka?",
   "whatIsYourFavoriteColor": "Jaki jest twój ulubiony kolor?",
-  "number": "numer"
+  "number": "numer",
+  "viewServicesBefore7Days": "View Services before 7 days",
+  "canAddAPhoneNumber": "Can add a phone number"
 }
