--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -201,5 +201,7 @@
   "whatIsYourFavoriteFood": "Was ist Ihr Lieblingsessen?",
   "whatIsYourFavoriteSong": "Was ist Ihr Lieblingslied?",
   "whatIsYourFavoriteColor": "Was ist Ihre Lieblingsfarbe?",
-  "number": "nummer"
+  "number": "nummer",
+  "viewServicesBefore7Days": "View Services before 7 days",
+  "canAddAPhoneNumber": "Can add a phone number"
 }
