--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -202,6 +202,11 @@
   "whatIsYourFavoriteSong": "Какая ваша любимая песня?",
   "whatIsYourFavoriteColor": "Какой ваш любимый цвет?",
   "number": "число",
-  "viewServicesBefore7Days": "View Services before 7 days",
-  "canAddAPhoneNumber": "Can add a phone number"
+  "viewServicesBefore7Days": "Просмотр услуг до 7 дней",
+"canAddAPhoneNumber": "Можно добавить номер телефона",
+"invalidPin": "Неверный PIN-код",
+"note": "Примечание",
+"enterANote": "Введите примечание",
+"characters": "символы"
 }
+  
