--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -202,6 +202,10 @@
   "whatIsYourFavoriteSong": "Яка твоя улюблена пісня?",
   "whatIsYourFavoriteColor": "Який твій улюблений колір?",
   "number": "номер",
-  "viewServicesBefore7Days": "View Services before 7 days",
-  "canAddAPhoneNumber": "Can add a phone number"
+"viewServicesBefore7Days": "Переглянути послуги до 7 днів",
+ "canAddAPhoneNumber": "Можна додати номер телефону",
+ "invalidPin": "Недійсний PIN-код",
+ "note": "Примітка",
+ "enterANote": "Введіть примітку",
+ "characters": "персонажі"
 }
