--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -201,7 +201,12 @@
   "whatIsYourFavoriteFood": "Was ist Ihr Lieblingsessen?",
   "whatIsYourFavoriteSong": "Was ist Ihr Lieblingslied?",
   "whatIsYourFavoriteColor": "Was ist Ihre Lieblingsfarbe?",
-  "number": "nummer",
-  "viewServicesBefore7Days": "View Services before 7 days",
-  "canAddAPhoneNumber": "Can add a phone number"
+  "number": "Nummer",
+"viewServicesBefore7Days": "Dienste vor 7 Tagen anzeigen",
+"canAddAPhoneNumber": "Kann eine Telefonnummer hinzufügen",
+"invalidPin": "Ungültige PIN",
+"note": "Notiz",
+"enterANote": "Notiz eingeben",
+"characters": "Zeichen"
+
 }
