--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -202,10 +202,12 @@
   "whatIsYourFavoriteSong": "Яка твоя улюблена пісня?",
   "whatIsYourFavoriteColor": "Який твій улюблений колір?",
   "number": "номер",
-"viewServicesBefore7Days": "Переглянути послуги до 7 днів",
- "canAddAPhoneNumber": "Можна додати номер телефону",
- "invalidPin": "Недійсний PIN-код",
- "note": "Примітка",
- "enterANote": "Введіть примітку",
- "characters": "персонажі"
+  "viewServicesBefore7Days": "Переглянути послуги до 7 днів",
+  "canAddAPhoneNumber": "Можна додати номер телефону",
+  "invalidPin": "Недійсний PIN-код",
+  "note": "Примітка",
+  "enterANote": "Введіть примітку",
+  "characters": "персонажі",
+  "employeeWillBeDeletedPermanently": "Employee will be deleted Permanently",
+  "paymentByCash": "Payment By Cash"
 }
