--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -208,5 +208,7 @@
   "enterANote": "Wprowadź notatkę",
   "characters": "characters",
   "employeeWillBeDeletedPermanently": "Employee will be deleted Permanently",
-  "paymentByCash": "Payment By Cash"
+  "paymentByCash": "Payment By Cash",
+  "optionally": " (Optionally)",
+  "piecesLitersKilograms": "Pieces, Liters, Kilograms .. "
 }
