--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -33,7 +33,6 @@
   "userName": "User Name",
   "password": "Password",
   "orSignInAs": "Or sign in as",
-  "adminMaine": "Admin Maine",
   "enterYourLastName": "Enter your last name",
   "lastName": "Last Name",
   "enterYourLogin": "Enter your login",
@@ -211,5 +210,14 @@
   "employeeWillBeDeletedPermanently": "Employee will be deleted Permanently",
   "paymentByCash": "Payment By Cash",
   "optionally": " (Optionally)",
-  "piecesLitersKilograms": "Pieces, Liters, Kilograms .. "
+  "piecesLitersKilograms": "Pieces, Liters, Kilograms .. ",
+  "uniquenclients": "Unique\\nClients",
+  "setMaxRowsToKeep": "Set Max Rows to Keep",
+  "employeeInformation": "Employee Information",
+  "cashnpay": "Cash\\nPay",
+  "electricityWaterGasEtc": "Electricity, Water, Gas, etc",
+  "noOfnunits": "No. of\\nunits",
+  "unitOfnmeasurement": "Unit of\\nMeasurement",
+  "payWithCash": "Pay with Cash",
+  "adminMaine": "Admin Maine"
 }
