--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -1,215 +1,223 @@
 {
-  "addCost": "Добавить стоимость",
-  "repetitionInterval": "Интервал повторения",
-  "doNotRepeat": "Не повторять",
-  "everyDay": "каждый день",
-  "name": "Имя",
-  "nameOfExpense": "Название расхода",
-  "selectCategories": "Выбрать категории",
-  "categories": "Категории",
-  "deductFromTax": "Вычесть из НАЛОГА",
-  "systematicExpenditure": "Систематические расходы",
-  "everyWeek": "Каждую неделю",
-  "everyMonth": "Каждый месяц",
-  "everyQuarter": "Каждый квартал",
-  "everyYear": "Каждый год",
-  "numberOfUnits": "Количество единиц",
-  "unitPrice": "Цена за единицу",
-  "unitOfMeasurements": "Единица измерения",
-  "noUnitOfMeasurements": "Нет единиц измерения",
-  "save": "Сохранить",
-  "addEmployee": "Добавить сотрудника",
-  "enterYourName": "Введите свое имя",
-  "changeAdminPassword": "Изменить пароль администратора",
-  "exportToFile": "Экспортировать в файл",
-  "securityQuestions": "Вопросы безопасности",
-  "privacyPolicy": "Политика конфиденциальности",
-  "dataBackup": "Резервное копирование данных",
-  "backupData": "Резервные данные",
-  "restoreData": "Восстановить данные",
-  "clearData": "Очистить данные",
-  "areYouSureYouWantToClearAllData": "Вы уверены, что хотите удалить все данные?",
-  "login": "Войти",
-  "userName": "Имя пользователя",
-  "password": "Пароль",
-  "orSignInAs": "Или войдите как",
-  "adminMaine": "Администратор Мэн",
-  "enterYourLastName": "Введите свою фамилию",
-  "lastName": "Фамилия",
-  "enterYourLogin": "Введите свой логин",
-  "enterYourPassword": "Введите свой пароль",
-  "selectCategoriesFromTheListnmaybeSeveral": "Выберите категории из списка\n(может быть несколько)",
-  "setPercentageOfIncomeIfNecessary": "При необходимости установите процент дохода",
-  "setPercentageOfIncome": "Установить процент дохода",
-  "percentage": "Процент",
-  "visibilityLevelWithACrossFromTheList": "Уровень видимости с крестиком из списка",
-  "employeePercentage": "Процент сотрудников",
-  "totalPercentagePerMonth": "Общий процент в месяц",
-  "amountPercentagePerDay": "Сумма в процентах в день",
-  "showPhone": "Показать телефон",
-  "totalPriceServicePerDay": "Общая стоимость услуги за день",
-  "saveEmployee": "Сохранить сотрудника",
-  "numberOfServiceForMonth": "Количество услуг за месяц",
-  "hello": "привет ",
-  "addReport": "Добавить отчет",
-  "nameOfClient": "Имя клиента",
-  "lastNameOfClient": "Фамилия клиента",
-  "phoneNumber": "Номер телефона",
-  "newCustomer": "Новый клиент",
-  "regularCustomer": "Постоянный клиент",
-  "paymentByCard": "Оплата картой",
-  "selectCategory": "Выбрать категорию",
-  "selectService": "Выбрать услугу",
-  "priceOfService": "Цена услуги",
-  "price": "Цена",
-  "submit": "Отправить",
-  "addService": "Добавить сервис",
-  "createOrSelectACategory": "Создайте или выберите категорию",
-  "orCreateANewCategory": "Или создайте новую категорию",
-  "enterCategoryName": "Введите название категории",
-  "nameOfTheService": "Название службы",
-  "categoryName": "Название категории",
-  "enterServiceName": "Введите имя службы",
-  "serviceName": "Имя службы",
-  "costOfMaterialsForThisServices": "Стоимость материалов для этой услуги",
-  "enterPrice": "Введите цену",
-  "adminLogin": "Вход администратора",
-  "setAdminPassword": "Установить пароль администратора",
-  "enterPasswordHere": "Введите пароль здесь",
-  "forgotPassword": "Забыли пароль?",
-  "resetHere": "Сбросить здесь",
-  "exit": "Выход",
-  "areYouSureYouWantToExitTheApp": "Вы уверены? Вы хотите выйти из приложения.",
-  "exitApp": "Выйти из приложения",
-  "yes": "Да",
-  "no": "нет",
-  "costsFilter": "Фильтр затрат",
-  "clear": "Очистить",
-  "nameOfCost": "Название стоимости",
-  "costsPriceRange": "Диапазон цен затрат",
-  "minPrice": "Минимальная цена",
-  "maxPrice": "Максимальная цена",
-  "applyFilter": "Применить фильтр",
-  "cancel": "Отмена",
-  "confirm": "Подтвердить",
-  "all": "Все",
-  "done": "сделано",
-  "newPassword": "Новый пароль",
-  "editCategory": "Редактировать категорию",
-  "editService": "Редактировать сервис",
-  "answerTheSecurityQuestionsToLogin": "Ответьте на контрольные вопросы для входа в систему",
-  "answer": "Ответить",
-  "incorrectAnswer": "Неправильный ответ",
-  "pleaseTryAgain": "Пожалуйста, попробуйте еще раз",
-  "previousQuestion": "Предыдущий вопрос",
-  "selectQuestion": "Выбрать вопрос",
-  "pleaseSelectAQuestion": "Пожалуйста, выберите вопрос",
-  "pleaseFillInTheAnswerField": "Пожалуйста, заполните поле ответа",
-  "report": "Отчет: ",
-  "employeeName": "Имя сотрудника: ",
-  "isRegularCus": "Является обычным Cus. : ",
-  "cardPay": "Оплата картой: ",
-  "date": "Дата",
-  "category": "Категория: ",
-  "service": "Сервис ",
-  "editReport": "Редактировать отчет",
-  "employees": "Сотрудники",
-  "noEmployeeFoundnpleaseAddANewEmployee": "Сотрудник не найден\nПожалуйста, добавьте нового сотрудника.",
-  "search": "Поиск",
-  "accessLevel": "Уровень доступа",
-  "notLimited": "Не ограничено",
-  "limited": "Ограничено",
-  "applyFilters": "Применить фильтры",
-  "filters": "Фильтры",
-  "phone": "Телефон",
-  "priceRange": "Диапазон цен",
-  "dates": "Даты",
-  "from": "От",
-  "to": "Кому",
-  "masters": "Мастера",
-  "services": "Услуги",
-  "selectLanguage": "Выбрать язык",
-  "nameOfncost": "Имя\nCost",
-  "relatedncategories": "Связанные\nКатегории",
-  "deductednfromTax": "Вычтено\nиз налога",
-  "systematicnexpenditure": "Системаматематические\nРасходы",
-  "deleteCost": "Удалить стоимость",
-  "areYouSureYouWantToDeleteThisCost": "Вы уверены, что хотите удалить эту стоимость?",
-  "noData": "Нет данных",
-  "regncus": "Reg\nCus",
-  "cardnpay": "Карта\nPay",
-  "employeendata": "Данные о сотруднике\n",
-  "customerndata": "Данные клиента\n",
-  "newncus": "Новый\nCus",
-  "total": "Итого",
-  "deleted": "Удален",
-  "itemDeleted": "Элемент удален",
-  "deleteCategory": "Удалить категорию",
-  "areYouSureYouWantToDeleteThisCategory": "Вы уверены, что хотите удалить эту категорию?",
-  "deleteService": "Удалить службу",
-  "areYouSureYouWantToDeleteThisService": "Вы уверены, что хотите удалить эту службу?",
-  "noServicesFoundnpleaseAddANewService": "Службы не найдены\nПожалуйста, добавьте новую службу",
-  "backupRestoredSuccessfully": "Резервная копия успешно восстановлена!",
-  "reloadApp": "Перезагрузить приложение",
-  "restoringDatabase": "Восстановление базы данных...",
-  "exported": "Экспортировано",
-  "checkYourFileInTheDownloadsFolder": "Проверьте свой файл в папке Загрузки",
-  "selectTheDatabaseToRestore": "Выберите базу данных для восстановления",
-  "reportssalesTracker": "Отчеты/Отслеживание продаж",
-  "costsTracker": "Отслеживание затрат",
-  "clearDates": "Очистить даты",
-  "anErrorOccurred": "Произошла ошибка",
-  "noDataFound": "Данные не найдены",
-  "masternname": "Мастер\nИмя",
-  "noRegnclient": "Нет. Reg\nClient",
-  "noNewnclient": "Нет. Новый\nКлиент",
-  "noOfnservices": "Нет\nуслуг",
-  "cost": "Стоимость",
-  "newnclient": "Новый\nКлиент",
-  "regnclient": "Регистр\nКлиент",
-  "numOfnservices": "Количество\nУслуг",
-  "costs": "расходы",
-  "sales": "Продажи",
-  "pleaseAddACategoryFirstToAddAnEmployee": "Чтобы добавить сотрудника, сначала добавьте категорию",
-  "addCategoryFirst": "Сначала добавьте категорию",
-  "logout": "Выход",
-  "areYouSureYouWantToLogout": "Вы уверены? Вы хотите выйти из системы.",
-  "graphics": "Графика",
-  "results": "Результаты",
-  "reports": "Отчеты",
-  "error": "Ошибка",
-  "loginOrPasswordIsIncorrect": "Логин или пароль неверен",
-  "миллилитры": "Милилитры",
-  "кВтч": "КВт/ч",
-  "килограммы": "Килограммы",
-  "письма": "Письма",
-  "куски": "Части",
-  "граммы": "Граммы",
-  "boxes": "Коробки",
-  "thereIsOnlyOneCostAddedYetAddMoreTo": "Добавлена ​​только одна стоимость, но добавьте еще, чтобы построить график",
-  "noCostsAddedYet": "Стоимости пока не добавлены",
-  "allCostsAreAddedOnTheSameDateAddMore": "Все затраты добавляются в одну и ту же дату, добавьте еще, чтобы построить график",
-  "settings": "Настройки",
-  "статистика": "Статистика",
-  "costOfMaterials": "Стоимость\nматериалов",
-  "pricenservices": "Цена\nуслуги",
-  "netProfit": "Чистая\nприбыль",
-  "whatIsTheNameOfYourFavoritePet": "Как зовут вашего любимого питомца?",
-  "whatsYourChildhoodNickname": "Какой у вас псевдоним в детстве?",
-  "whatIsYourFavoriteMovie": "Какой ваш любимый фильм?",
-  "whatIsYourFavoriteBook": "Какая ваша любимая книга?",
-  "whatIsYourFavoriteFood": "Какая ваша любимая еда?",
-  "whatIsYourFavoriteSong": "Какая ваша любимая песня?",
-  "whatIsYourFavoriteColor": "Какой ваш любимый цвет?",
-  "number": "число",
-  "viewServicesBefore7Days": "Просмотр услуг до 7 дней",
-  "canAddAPhoneNumber": "Можно добавить номер телефона",
-  "invalidPin": "Неверный PIN-код",
-  "note": "Примечание",
-  "enterANote": "Введите примечание",
-  "characters": "символы",
-  "employeeWillBeDeletedPermanently": "Employee will be deleted Permanently",
-  "paymentByCash": "Payment By Cash",
-  "optionally": " (Optionally)",
-  "piecesLitersKilograms": "Pieces, Liters, Kilograms .. "
+"addCost": "Добавить Расход",
+"repetitionInterval": "Интервал повторения",
+"doNotRepeat": "Не повторяется",
+"everyDay": "Каждый день",
+"name": "Название ",
+"nameOfExpense": "Название расходов",
+"selectCategories": "Выберите категорию",
+"categories": "Категории",
+"deductFromTax": "Вычесть из налога",
+"systematicExpenditure": "Систематические расходы",
+"everyWeek": "Каждую неделю",
+"everyMonth": "Каждый месяц",
+"everyQuarter": "Каждый квартал",
+"everyYear": "Каждый год",
+"numberOfUnits": "Количество единиц",
+"unitPrice": "Цена за единицу",
+"unitOfMeasurements": "Единица измерения",
+"noUnitOfMeasurements": "Нет единиц измерения",
+"save": "Сохранить",
+"addEmployee": "Добавить сотрудника",
+"enterYourName": "Введите имя",
+"changeAdminPassword": "Изменить пароль администратора",
+"exportToFile": "Экспорт в файл Excel",
+"securityQuestions": "Контрольный вопрос",
+"privacyPolicy": "Политика конфиденциальности",
+"dataBackup": "Резервное копирование данных",
+"backupData": "Резервное копирование данных",
+"restoreData": "Восстановление данных",
+"clearData": "Очистить данные",
+"areYouSureYouWantToClearAllData": "Вы уверены, что хотите очистить все данные?",
+"login": "Вход",
+"userName": "Имя пользователя",
+"password": "Пароль",
+"orSignInAs": "Или войдите как",
+"adminMaine": "Админ панель",
+"enterYourLastName": "Введите фамилию",
+"lastName": "Фамилия",
+"enterYourLogin": "Введите логин",
+"enterYourPassword": "Введите пароль",
+"selectCategoriesFromTheListnmaybeSeveral": "Выберите категории из списка\n(может быть несколько)",
+"setPercentageOfIncomeIfNecessary": "Установите процент дохода, если необходимо",
+"setPercentageOfIncome": "Установите процент дохода",
+"percentage": "Процент",
+"visibilityLevelWithACrossFromTheList": "Уровень видимости",
+"employeePercentage": "Процент сотрудника",
+"totalPercentagePerMonth": "Сумма процента в месяц",
+"amountPercentagePerDay": "Сумма процента в день",
+"showPhone": "Показать телефон",
+"totalPriceServicePerDay": "Сумма цен услуг в день",
+"saveEmployee": "Сохранить сотрудника",
+"numberOfServiceForMonth": "Количество услуг за месяц",
+"hello": "Привет ",
+"addReport": "Добавить отчет",
+"nameOfClient": "Имя клиента",
+"lastNameOfClient": "Фамилия клиента",
+"phoneNumber": "Номер телефона",
+"newCustomer": "Новый клиент",
+"regularCustomer": "Постоянный клиент",
+"paymentByCard": "Оплата наличными",
+"selectCategory": "Выберите категорию",
+"selectService": "Выберите услугу",
+"priceOfService": "Цена услуги",
+"price": "Цена",
+"submit": "Отправить",
+"addService": "Добавить услугу",
+"createOrSelectACategory": "Выберите категорию",
+"orCreateANewCategory": "Или создайте новую категорию",
+"enterCategoryName": "Введите название категории",
+"nameOfTheService": "Создайте услугу",
+"categoryName": "Название категории",
+"enterServiceName": "Введите название услуги",
+"serviceName": "Название услуги",
+"costOfMaterialsForThisServices": "Стоимость материалов для этой услуги",
+"enterPrice": "Введите цену",
+"adminLogin": "Вход администратора",
+"setAdminPassword": "Установить пароль администратора ",
+"enterPasswordHere": "Введите пароль здесь",
+"forgotPassword": "Забыли пароль?",
+"resetHere": "Сбросить здесь",
+"exit": "Выход",
+"areYouSureYouWantToExitTheApp": "Вы уверены? Вы хотите выйти из приложения.",
+"exitApp": "Выйти из приложения",
+"yes": "Да",
+"no": "Нет",
+"costsFilter": "Фильтр расходов",
+"clear": "Очистить",
+"nameOfCost": "Название расходов",
+"costsPriceRange": "Диапазон цен расходов",
+"minPrice": "Мин. цена",
+"maxPrice": "Макс. цена",
+"applyFilter": "Применить фильтр",
+"cancel": "Отмена",
+"confirm": "Подтвердить",
+"all": "Все",
+"done": "Готово",
+"newPassword": "Новый пароль",
+"editCategory": "Изменить категорию",
+"editService": "Изменить услугу",
+"answerTheSecurityQuestionsToLogin": "Ответьте на контрольный вопрос для входа",
+"answer": "Ответ",
+"incorrectAnswer": "Неправильный ответ",
+"pleaseTryAgain": "Попробуйте еще раз",
+"previousQuestion": "Предыдущий вопрос ",
+"selectQuestion": "Выберите вопрос",
+"pleaseSelectAQuestion": "Выберите вопрос",
+"pleaseFillInTheAnswerField": "Пожалуйста, заполните поле ответа",
+"report": "Отчет: ",
+"employeeName": "Имя сотрудника: ",
+"isRegularCus": "Постоянный клиент : ",
+"cardPay": "Наличные: ",
+"date": "Дата ",
+"category": "Категория: ",
+"service": "Услуга",
+"editReport": "Редактировать отчет",
+"employees": "Сотрудники",
+"noEmployeeFoundnpleaseAddANewEmployee": "Сотрудник не найден\nПожалуйста, добавьте нового сотрудника.",
+"search": "Поиск",
+"accessLevel": "Уровень доступа",
+"notLimited": "Не ограничен",
+"limited": "Ограничен",
+"applyFilters": "Применить фильтр",
+"filters": "Фильтр",
+"phone": "Телефон",
+"priceRange": "Диапазон цен",
+"dates": "Даты",
+"from": "С",
+"to": "По",
+"masters": "Сотрудники",
+"services": "Услуги",
+"selectLanguage": "Выбрать язык",
+"nameOfncost": "Название\nрасхода",
+"relatedncategories": "Связанные\nкатегории",
+"deductednfromTax": "Вычитается\nиз налога",
+"systematicnexpenditure": "Систематические\nрасходы",
+"deleteCost": "Удалить расход",
+"areYouSureYouWantToDeleteThisCost": "Вы уверены, что хотите удалить этот расход?",
+"noData": "Нет данных",
+"regncus": "Рег\nРасход",
+"cardnpay": "Наличные\nОплата",
+"employeendata": "Информация\nсотрудника",
+"customerndata": "Информация\nклиента",
+"newncus": "Новый\nРасход",
+"total": "Сумма",
+"deleted": "Удалено",
+"itemDeleted": "Удалено",
+"deleteCategory": "Удалить категорию",
+"areYouSureYouWantToDeleteThisCategory":"ArВы уверены что хотите удалить эту категорию?",
+"deleteService": "Удалить услугу",
+"areYouSureYouWantToDeleteThisService": "Вы уверены что хотите удалить эту услугу?",
+"noServicesFoundnpleaseAddANewService": "Услуги не найдено \n Пожалуйста добавьте новую услугу",
+"backupRestoredSuccessfully": "Данные восстановлены успешно!",
+"reloadApp": "Перезагрузить приложение",
+"restoringDatabase": "Восстановление базы данных…",
+"exported": "Експортовано",
+"checkYourFileInTheDownloadsFolder": "Файл находится в папке «Загрузки»",
+"selectTheDatabaseToRestore": "Выберите файл базы для восстановления",
+"reportssalesTracker": "График рапортов",
+"costsTracker": "График расходов",
+"clearDates": "Очистить данные",
+"anErrorOccurred": "Произошла ошибка",
+"noDataFound": "Данные не найдены",
+"masternname": "Имя\nсотрудника",
+"noRegnclient": "Сумма\nпостоянных",
+"noNewnclient": "Сумма\nНовых",
+"noOfnservices": "Сумма\nуслуг",
+"cost": "Расход",
+"newnclient": "Новых\nклиентов",
+"regnclient": "Постоянных\nклиентов",
+"numOfnservices": "Сумма\nуслуг",
+"costs": "Расход",
+"sales": "Продажа",
+"pleaseAddACategoryFirstToAddAnEmployee": "Сначала добавьте категорию, чтобы добавить сотрудника",
+"addCategoryFirst": "Добавьте сначала категорию",
+"logout": "Выход",
+"areYouSureYouWantToLogout": "Вы уверены? Вы хотите выйти из приложения.",
+"graphics": "Графики",
+"results": "Результаты",
+"reports": "Отчеты",
+"error": "Ошибка",
+"loginOrPasswordIsIncorrect": "Неверный логин или пароль",
+"milliliters": "Миллилитры",
+"kwh": "КВт/ч",
+"kilograms": "Килограммы",
+"letters": "Литры",
+"pieces": "Штуки",
+"grams": "Граммы",
+"boxes": "Пачки",
+"thereIsOnlyOneCostAddedYetAddMoreTo": "Добавлена ​​только один расход, добавьте еще для построения графика",
+"noCostsAddedYet": "Пока нет добавленых расходов",
+"allCostsAreAddedOnTheSameDateAddMore": "Все расходы добавлены в ту же дату, добавьте еще для построения графика",
+"settings": "Настройки",
+"statistic": "Статистика",
+"costOfMaterials": "Стоимость\nматериалов",
+"pricenservices": "Цена\nуслуг",
+"netProfit": "Прибыль (=цена услуги-цена материалов\n-процен работника-расходы в этом периоде)",
+"whatIsTheNameOfYourFavoritePet": "Как зовут вашего любимого питомца?",
+"whatsYourChildhoodNickname": "Какое било у вас прозвище в детстве?",
+"whatIsYourFavoriteMovie": "Какой ваш любимый фильм?",
+"whatIsYourFavoriteBook": "Какая ваша любимая книга?",
+"whatIsYourFavoriteFood": "Какая ваша любимая еда?",
+"whatIsYourFavoriteSong": "Какая ваша любимая песня?",
+"whatIsYourFavoriteColor": "Какой ваш любимый цвет?",
+"number": "номер",
+"viewServicesBefore7Days": "Видимости услуг больше 7 дней",
+"canAddAPhoneNumber": "Возможность добавлять номер телефона",
+"invalidPin": "Неверный PIN-код",
+"note": "Примечание",
+"enterANote": "Введите примечание",
+"characters": "символов",
+"employeeWillBeDeletedPermanently": "Сотрудник будет удален навсегда",
+"paymentByCash": "Оплата наличными",
+"optionally": " (Необязательно)",
+"piecesLitersKilograms": "Штуки, литры,килограммы … ",
+  "uniquenclients": "Unique\\nClients",
+  "setMaxRowsToKeep": "Set Max Rows to Keep",
+  "employeeInformation": "Employee Information",
+  "cashnpay": "Cash\\nPay",
+  "electricityWaterGasEtc": "Electricity, Water, Gas, etc",
+  "noOfnunits": "No. of\\nunits",
+  "unitOfnmeasurement": "Unit of\\nMeasurement",
+  "payWithCash": "Pay with Cash"
 }
